--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,7 +6,7 @@ $font-body: 'Inconsolata', monospace;
 $font-post: 'Lora', serif;
 
 $color-alpha: #4284f5;
-$color-alpha--light: #f5f3ef;
+$color-alpha--light: #e8f7ff;
 
 $color-black: #0a0a0a;
 $color-grey: #f8f9f9;
