--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,9 +1,9 @@
 /**
  * Base Variables
  */
-$font-header: 'Space Mono', monospace;
-$font-body: 'Inconsolata', monospace;
-$font-post: 'Lora', serif;
+$font-header: 'Sniglet', monospace;
+$font-body: 'PT Sans', monospace;
+$font-post: 'PT Sans', serif;
 
 $color-alpha: #4284f5;
 $color-alpha--light: #e8f7ff;
