--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,11 +1,11 @@
 /**
  * Base Variables
  */
-$font-header: 'Sniglet', monospace;
-$font-body: 'PT Sans', monospace;
-$font-post: 'PT Sans', serif;
+$font-header: 'Indie Flower', handwriting;
+$font-body: 'PT Sans', sans serif;
+$font-post: 'PT Sans', sans serif;
 
-$color-alpha: #4284f5;
+$color-alpha: #244782;
 $color-alpha--light: #e8f7ff;
 
 $color-black: #0a0a0a;
