--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,7 +3,7 @@
  */
 $font-header: 'Indie Flower', handwriting;
 $font-body: 'PT Sans', sans serif;
-$font-post: 'PT Sans', sans serif;
+$font-post: 'ZCOOL KuaiLe', display;
 
 $color-alpha: #244782;
 $color-alpha--light: #e8f7ff;
