--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,10 +3,10 @@
  */
 $font-header: 'Indie Flower', handwriting;
 $font-body: 'PT Sans', sans serif;
-$font-post: 'ZCOOL KuaiLe', display;
+$font-post: 'PT Sans', sans serif;
 
-$color-alpha: #244782;
-$color-alpha--light: #e8f7ff;
+$color-alpha: #9f8f68;
+$color-alpha--light: #f5f3ef;
 
 $color-black: #0a0a0a;
 $color-grey: #f8f9f9;
