--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,52 +1,24 @@
 ---
 layout: default
 ---
-<section class="previews">
-  <div>
-    <a class="nav nav--white" href="{{ site.baseurl }}/">
-      <i class="fa fa-lg fa-arrow-left"></i>
-      <span>Back to Posts</span>
-    </a>
-    {% for post in site.categories[page.title] %}
-      <figure class="absolute-bg preview__img" style="background-image: url('{{ post.image }}');"></figure>
-    {% endfor %}
-    <div class="previews__container">
-      <span>Category</span>
-      <h1>{{ page.title }}</h1>
-    </div>
-  </div>
-
-  <div>
-    <header>
-      <ul class="tabs">
-        <li class="tabs__item">{{ page.title }}</li>
-        <li class="tabs__item">Categories</li>
-      </ul>
-    </header>
-
-    <div class="tab">
-      <ul itemscope itemtype="http://schema.org/Blog">
-
-        {% for post in site.categories[page.title] %}
-
-          <li class="preview" itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
-            <a class="preview__link" href="{{ post.url | prepend: site.baseurl }}" itemprop="url">
-              <span class="preview__date" itemprop="datePublished" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%b %-d, %Y" }}</span>
-              <h2 class="preview__header" itemprop="name">{{ post.title }}</h2>
-              <p class="preview__excerpt" itemprop="description">{{ post.content | strip_html | truncatewords: 30 }}</p>
-              <span class="preview__more">Read More</span>
-            </a>
-          </li>
-
-        {% endfor %}
-
-      </ul>
-
-      {% include archive-link.html %}
-      
-    </div>
-
-    {% include categories-tab.html %}
-
-  </div>
-</section>
+<h2>\{\{ page.title }}</h2>
+<div class="row">
+	<ul class="col s12 m10 section">
+	　　{\% for post in site.categories.[page.category] %}
+	　　　　<li class="card blog-item" data-category="\{\{post.category}}">
+				<div class="card-content">
+					<div class="card-title"><a href="/blog\{\{ post.url }}">\{\{ post.title }}</a></div>
+				  	<p class="excerpt">\{\{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+					  <p>\{\{ post.date | date: "%Y年%m月%d日" }}</p>
+				</div>
+			</li>
+	　　{\% endfor %}
+	</ul>
+</div>
+<ul class="sidebar">
+	<li><a class="sidebar-btn" href="\{\{site.baseurl}}" data-category="all">all</a></li>
+	{\% for category in site.categories %}
+	        {\% for post in category.first %}<li><a class="sidebar-btn" href="\{\{site.baseurl}}/categories/\{\{ category | first }}" data-category="\{\{category.first}}">{{category.first}}(\{\{category.last.size}})</a></li>
+	        {\% endfor %}
+	{\% endfor %}
+</ul>
